[project]
name = "etl_agent"
version = "0.1.0"
description = "etl_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
kickoff = "etl_agent.main:kickoff"
run_crew = "etl_agent.main:kickoff"
plot = "etl_agent.main:plot"
run_with_trigger = "etl_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
